<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="test.yy.chen.shopmall.app.MainActivity"
    >

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <!--</RelativeLayout>-->

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/home_bottom_parent_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/main_style"
            android:drawableTop="@drawable/main_home_selector"
            android:text="@string/home"
            />

        <RadioButton
            android:id="@+id/rb_type"
            style="@style/main_style"
            android:drawableTop="@drawable/main_type_selector"
            android:text="@string/type"
            />

        <RadioButton
            android:id="@+id/rb_community"
            style="@style/main_style"
            android:drawableTop="@drawable/main_community_selector"
            android:text="@string/find"
            />

        <RadioButton
            android:id="@+id/rb_shopcar"
            style="@style/main_style"
            android:drawableTop="@drawable/main_shopcar_selector"
            android:text="@string/shopcar"
            />

        <RadioButton
            android:id="@+id/rb_personal"
            style="@style/main_style"
            android:drawableTop="@drawable/main_personal_selector"
            android:text="@string/personal"
            />

    </RadioGroup>


</LinearLayout>
