<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/cb_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_cb"
        android:button="@null"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_all"
        />

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_conut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/count"
        />

    <Button
        android:id="@+id/btn_accounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"/>

</merge>