<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ll_user"
              android:orientation="vertical"
              android:layout_width="match_parent"

              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/iv_navigate"
            android:background="@drawable/new_user_icon_background"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>
        <TextView
            android:gravity="center"
            android:text="@string/personal"
            android:textColor="@color/main_black"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <ImageView
            android:id="@+id/iv_set"
            android:src="@mipmap/set"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/iv_message"
            android:background="@drawable/community_message_icon"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/iv_logo"
            android:src="@drawable/new_user_icon"
            android:layout_centerInParent="true"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/ll_login"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/login"
                android:id="@+id/btn_login"
                android:button="@null"
                android:background="@android:color/transparent"
                android:layout_width="50dp"
                android:layout_height="40dp"/>
            <Button
                android:text="@string/login"
                android:id="@+id/btn_register"
                android:button="@null"
                android:background="@android:color/transparent"
                android:layout_width="50dp"
                android:layout_height="40dp">

            </Button>


        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/myorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:id="@+id/tv_allorder"
            android:text="@string/allorder"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_marginRight="8dp"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/home_arrow_right"
            android:layout_height="wrap_content">

        </TextView>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"></View>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_wait_offer"
            android:drawableTop="@drawable/user_channel_icon_order_no"
            style="@style/tv_home"
            android:text="@string/waitoffer"
            />

        <TextView
    android:id="@+id/tv_wait_send"

    android:drawableTop="@drawable/new_order_status_fahuo"
    style="@style/tv_home"
    android:text="@string/waitoffer"
    />

        <TextView
    android:id="@+id/tv_tranform"
    style="@style/tv_home"
    android:drawableTop="@drawable/new_order_status_shouhuo"
    android:text="@string/waitoffer"
    android:layout_width="68dp"/><TextView
    android:id="@+id/tv_complish"
    android:drawableTop="@drawable/new_order_status_help"
    style="@style/tv_home"
    android:text="@string/waitoffer"
    /><TextView
    android:id="@+id/tv_help"
    style="@style/tv_home"
    android:drawableTop="@drawable/new_order_status_help"

    android:text="@string/waitoffer"
    />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/white1"
        ></View>
    <TextView
        android:drawableLeft="@drawable/user_channel_icon_address"
        android:id="@+id/tv_address"
        android:layout_width="match_parent"
        android:text="@string/address"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        ></View>
    <TextView
        android:drawableLeft="@drawable/user_channel_icon_collect"
        android:id="@+id/tv_collection"
        android:layout_width="match_parent"
        android:text="@string/mycollection"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        android:id="@+id/view"></View>

    <TextView
        android:drawableLeft="@drawable/user_channel_icon_coupon"
        android:id="@+id/tv_balence"
        android:layout_width="match_parent"
        android:text="@string/balence"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        ></View> <TextView
        android:drawableLeft="@drawable/user_icon_ticket"
        android:id="@+id/tv_ticket"
        android:layout_width="match_parent"
        android:text="@string/ticket"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        ></View> <TextView
        android:drawableLeft="@drawable/user_channel_icon_score"
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:text="@string/score"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        ></View> <TextView
        android:drawableLeft="@drawable/user_channel_icon_prize"
        android:id="@+id/tv_prize"
        android:layout_width="match_parent"
        android:text="@string/prize"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        ></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/white1"
        ></View>
    <TextView
        android:drawableLeft="@drawable/user_channel_icon_invitation"
        android:id="@+id/tv_invitation"
        android:layout_width="match_parent"
        android:text="@string/invitation"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        ></View> <TextView
        android:drawableLeft="@drawable/user_channel_icon_feedback"
        android:id="@+id/tv_feedback"
        android:layout_width="match_parent"
        android:text="@string/feedback"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        ></View><TextView
        android:drawableLeft="@drawable/user_channel_icon_callcenter"
        android:id="@+id/tv_service"
        android:layout_width="match_parent"
        android:text="@string/service"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        ></View>


</LinearLayout>