<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/new_login_background"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_marginLeft="8dp"
                  android:layout_marginRight="8dp"
                  android:clipChildren="false"
                  android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ib_backToIndex"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:src="@drawable/top_bar_left_back"
            android:button="@null"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="40dp"/>

        <TextView
            android:layout_weight="0.88"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/community"
            android:gravity="center"
            android:textSize="@dimen/seck_size"
            android:id="@+id/textView"/>

        <ImageButton
            android:src="@drawable/new_message_icon"
            android:id="@+id/ib_message"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        ></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <ImageView
            android:layout_centerInParent="true"
            android:src="@drawable/new_user_login_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:background="@color/main_white"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:text="@string/zhanghao"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_account"
            android:layout_weight="1"
            android:background="@null"
                  android:layout_width="0dp"
                  android:maxLength="20"
                  android:layout_height="wrap_content"/>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white1"
        ></View>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:background="@color/main_white"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_gravity="center"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:maxLength="20"
            android:background="@null"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/ib_show"
            android:layout_gravity="center"
            android:background="@drawable/new_password_drawable_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <Button
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/btn_login"
        android:text="@string/nodoult"
        android:background="@color/main_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:checked="true"
            android:id="@+id/cb_protocol"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_cb"
            android:button="@null"
            />
        <TextView
            android:clickable="true"
            android:id="@+id/tv_protocol"
            android:text="@string/protocol"
            android:textColor="@color/main_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
<RelativeLayout
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_register"
        android:text="@string/register"

        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <TextView
        android:id="@+id/tv_password"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:text="@string/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
</RelativeLayout>
<TextView
    android:id="@+id/tv_other_login"
    android:gravity="center"
    android:clickable="true"
    android:text="@string/other"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></TextView>



</LinearLayout>