<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:background="@android:color/transparent"
            android:id="@+id/iv_user_icon"
            android:layout_width="30dp"
            android:layout_marginRight="8dp"
            android:layout_height="30dp"/>

        <TextView
            android:gravity="center_vertical"
            tools:text="nijhao"
            android:layout_weight="1"
            android:id="@+id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_showdate"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_showpic"
        android:layout_centerInParent="true"
        android:layout_width="200dp"
        android:layout_height="200dp"/>
    <com.opendanmaku.DanmakuView
        android:id="@+id/dv_show"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:layout_width="200dp"
        app:end_Y_offset="0.8"
        app:max_row="4"
        app:max_running_per_row="2"
        app:pick_interval="500"
        app:show_debug="false"
        app:start_Y_offset="0.2"
        android:layout_height="200dp"/>
    </RelativeLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_goodsdesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_showpic"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_hot_discuss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_ishot"
            android:background="@drawable/shade_hot"
            android:text="@string/hot"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            /><TextView
            android:id="@+id/tv_isTop"
            android:text="@string/top"
            android:background="@drawable/shade_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            /><TextView
           android:layout_marginLeft="8dp"
           android:layout_marginRight="8dp"
            android:id="@+id/tv_isElite"
            android:text="@string/elite"
            android:background="@drawable/shade_elite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
<View
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/white1"
    ></View>
    <RelativeLayout

         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <RadioButton
             android:id="@+id/rb_like"
             android:layout_toLeftOf="@+id/iv_diviver"
             android:layout_width="wrap_content"
             android:button="@null"
             android:layout_marginRight="5dp"
             android:gravity="center"
             android:drawableRight="@drawable/community_like_icon"
             tools:text="45"
             android:drawablePadding="8dp"
             android:layout_height="wrap_content"/>
         <ImageView
             android:id="@+id/iv_diviver"
             android:src="@drawable/community_mid_line"
             android:layout_width="wrap_content"

             android:layout_centerHorizontal ="true"
             android:layout_height="wrap_content"/>
         <RadioButton
             android:id="@+id/rg_discuss"
             android:layout_width="wrap_content"
             android:button="@null"
             tools:text="45"
             android:drawablePadding="8dp"
             android:layout_toRightOf="@+id/iv_diviver"
             android:paddingLeft="8dp"
             android:drawableLeft="@drawable/community_comment_icon"
             android:layout_height="wrap_content"/>
     </RelativeLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_say"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_say"
            android:layout_weight="1"
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btn_send"
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>
    </LinearLayout>

</LinearLayout>